--- a/driver-vpi/Makefile.in
+++ b/driver-vpi/Makefile.in
@@ -66,7 +66,10 @@ distclean: clean
 	rm -f Makefile config.log
 
 cppcheck: main.c
-	cppcheck --enable=all --std=c99 --std=c++11 -f $(INCLUDE_PATH) $^
+	cppcheck --enable=all --std=c99 --std=c++11 -f \
+	         --check-level=exhaustive \
+	         --suppressions-list=$(srcdir)/../cppcheck-global.sup \
+	         $(INCLUDE_PATH) $^
 
 Makefile: $(srcdir)/Makefile.in ../config.status
 	cd ..; ./config.status --file=driver-vpi/$@
