--- a/vvp/Makefile.in
+++ b/vvp/Makefile.in
@@ -110,6 +110,8 @@ distclean: clean
 
 cppcheck: $(O:.o=.cc) draw_tt.c
 	cppcheck --enable=all --std=c99 --std=c++11 -f \
+	         --check-level=exhaustive \
+	         --suppressions-list=$(srcdir)/../cppcheck-global.sup \
 	         --suppressions-list=$(srcdir)/cppcheck.sup \
 	         -UMODULE_DIR1 -UMODULE_DIR2 -UYY_USER_INIT \
 	         -UYYPARSE_PARAM -UYYPRINT -Ushort -Usize_t -Uyyoverflow \
