--- a/vvp/Makefile.in
+++ b/vvp/Makefile.in
@@ -41,7 +41,6 @@ HOSTCFLAGS = @WARNING_FLAGS@ @WARNING_FLAGS_CC@ @CFLAGS@
 BUILDCC = @CC_FOR_BUILD@
 BUILDEXT = @BUILD_EXEEXT@
 CXX = @CXX@
-DLLTOOL = @DLLTOOL@
 INSTALL = @INSTALL@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -149,19 +148,9 @@ else
 ifeq (@WIN32@,yes)
 # To support cocotb, we export the VPI functions directly. This allows
 # cocotb to build VPI modules without using our vpi_user.h and libvpi.a.
-# This requires making the vvp.exe in two steps. The first step makes
-# a vvp.exe that dlltool can use to make an export library, and the
-# second step makes a vvp.exe that really exports those things.
-#
-# To get this to work correctly we must use the suffixed version of the
-# executable to build the export library, but leave the final vvp.exe
-# without a suffix.
+# The .def file controls what is exported.
 vvp@EXEEXT@: main.o $O $(srcdir)/vvp.def
-	$(CXX) -o vvp$(suffix)@EXEEXT@ $(LDFLAGS) main.o $O $(dllib) $(LIBS)
-	$(DLLTOOL) --dllname vvp$(suffix)@EXEEXT@ --def $(srcdir)/vvp.def \
-		--output-exp vvp.exp
-	rm -f vvp$(suffix)@EXEEXT@
-	$(CXX) $(LDFLAGS) -o vvp@EXEEXT@ vvp.exp $(LDFLAGS) main.o $O $(dllib) $(LIBS)
+	$(CXX) $(LDFLAGS) -o vvp@EXEEXT@ $(LDFLAGS) $(srcdir)/vvp.def main.o $O $(dllib) $(LIBS)
 else
 vvp@EXEEXT@: $O main.o
 	$(CXX) $(LDFLAGS) -o vvp@EXEEXT@ main.o $O $(LIBS) $(dllib)
