--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         export PATH="/usr/local/opt/bison/bin:$PATH"
         autoconf
-        ./configure
+        ./configure --enable-libveriuser
         make -j$(nproc) check
         sudo make install
 
@@ -59,7 +59,7 @@ jobs:
     - name: Build, check and install
       run: |
         autoconf
-        ./configure
+        ./configure --enable-libveriuser
         make -j$(nproc) check
         sudo make install
 
