Add missing gperf dependency in MSYS2 PKGBUILD.

--- a/msys2/PKGBUILD
+++ b/msys2/PKGBUILD
@@ -11,7 +11,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-cc-libs"
          "${MINGW_PACKAGE_PREFIX}-readline"
          "${MINGW_PACKAGE_PREFIX}-bzip2"
          "${MINGW_PACKAGE_PREFIX}-zlib")
-makedepends=("man-db"
+makedepends=("gperf man-db"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-ghostscript")
