--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,9 +77,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { msystem: MINGW64, env: x86_64 }
-          - { msystem: UCRT64,  env: ucrt-x86_64 }
-          - { msystem: CLANG64, env: clang-x86_64 }
+          - { msystem: MINGW64, env: x86_64       opt: pli1 }
+          - { msystem: UCRT64,  env: ucrt-x86_64  opt: pli1 }
+          - { msystem: CLANG64, env: clang-x86_64 opt: no-pli1 }
     name: 🟪 ${{ matrix.msystem}}
     defaults:
       run:
@@ -110,7 +110,9 @@ jobs:
     - name: Build and check
       run: |
         cd msys2
-        export IVL_CONFIG_OPTIONS="--enable-libveriuser"
+        if [ ${{ matrix.opt }} = "pli1" ] ; then
+            export IVL_CONFIG_OPTIONS="--enable-libveriuser"
+        fi
         makepkg-mingw --noconfirm --noprogressbar -sCLf
 
     - name: Install
@@ -118,7 +120,7 @@ jobs:
 
     - name: Test
       run: |
-        ./.github/test.sh
+        ./.github/test.sh ${{ matrix.opt }}
 
     - uses: actions/upload-artifact@v4
       with:
